--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "http://FarihaAlmas.github.io/login-user",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-native-scripts build",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
